--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://ghdltd.referrals.selectminds.com/jobs/analytics-data-science-consultants-all-levels-2380'>Analytics & Data Science Consultants - All Levels - GHD Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://punchh.com/careers/from-intern-to-employee-how-i-found-my-full-time-fit-2/'>Learning Data Science Outside of the Classroom - Punchh</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -165,7 +169,7 @@
 <p><span class="badge badge-light">Springfield, VASpringfield, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698578064-junior-data-scientist-m-f-'>Ubisoft Junior Data Scientist (M/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698578064-junior-data-scientist-m-f-'>Ubisoft Junior Data Scientist (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -193,7 +197,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://netimpactstrategies.applytojob.com/apply/k90r2ujKhS/Data-Scientist'>Data Scientist - NetImpact Strategies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/k90r2ujKhS/Data-Scientist'>Data Scientist - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -215,7 +219,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=njSgpMw7'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=njSgpMw7'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -235,7 +239,7 @@
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dathena/aebcbfa7-e591-470a-9440-d7f8561e0325'>Dathena - Data Scientist (Bangkok)</a></h5> 
+<h5><a href='https://jobs.lever.co/dathena/aebcbfa7-e591-470a-9440-d7f8561e0325'>Dathena - Data Scientist (Bangkok)</a></h5> 
 <p><span class="badge badge-light">Bangkok Bangkok Bangkok</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -247,7 +251,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lyrahealth/9eeeec31-8655-4054-92ba-025657d812ab'>Lyra Health - Data Scientist - Clinical and Product</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lyrahealth/9eeeec31-8655-4054-92ba-025657d812ab'>Lyra Health - Data Scientist - Clinical and Product</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -262,7 +266,7 @@
 <p>5 days ago ... Data Scientist. The Challenge: Do you want to be a Data Scientist? Are you 
 innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist--Senior_R0071614-1'>Data Scientist, Senior</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist--Senior_R0071614-1'>Data Scientist, Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Data Scientist, Senior. The Challenge: Do you want to be a Data Scientist? -Are 
 you innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
@@ -304,11 +308,11 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698464953-data-integration-manager-data-science-'>Publicis Groupe Data Integration Manager (Data Science) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698464953-data-integration-manager-data-science-'>Publicis Groupe Data Integration Manager (Data Science) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
+<h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -328,7 +332,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -344,7 +348,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/ca0ca52c-374c-4e01-b249-3c73813e6907'>Wealthfront - Data Science - New College Graduate</a></h5> 
+<h5><a href='https://jobs.lever.co/wealthfront/ca0ca52c-374c-4e01-b249-3c73813e6907'>Wealthfront - Data Science - New College Graduate</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -360,7 +364,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/invision/jobs/1936086'>Job Application for Senior Data Scientist, Marketing at InVision</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invision/jobs/1936086'>Job Application for Senior Data Scientist, Marketing at InVision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -392,7 +396,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, GA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -404,7 +408,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -416,7 +420,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1918875'>Job Application for  [GO Data Science]Director, Data Science at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1918875'>Job Application for  [GO Data Science]Director, Data Science at Coupang</a></h5> 
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -475,12 +479,6 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <h5><a href='https://worknola.com/job/324370/associate-data-scientist'>Associate Data Scientist | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>2 days ago ... Design and implement data science research projects that utilize advanced 
-statistical methods, such as regression analysis and machine learning, to 
-address?...</p>
 <hr/>
 
 
