--- a/data-engineer.html
+++ b/data-engineer.html
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698571760-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698571760-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -117,11 +117,11 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4492957002'>Job Application for Head of Data Engineering at Tandem Bank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4492957002'>Job Application for Head of Data Engineering at Tandem Bank</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698540501-data-engineer-data-platform'>Traveloka Data Engineer - Data Platform | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698540501-data-engineer-data-platform'>Traveloka Data Engineer - Data Platform | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -177,7 +177,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -185,7 +185,7 @@ systems,?...</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/boxycharm/jobs/1937585'>Job Application for BI Data Engineer at Boxy Charm</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxycharm/jobs/1937585'>Job Application for BI Data Engineer at Boxy Charm</a></h5> 
 <p><span class="badge badge-light">Pembroke Pines, FL  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -209,7 +209,7 @@ systems,?...</p>
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orTVafw9&__jvst=Tenable+Employee&__jvsd=sXmXfhwh&__jvsc=Twitter&bid=nLhioMwZ'>Tenable Careers - Principal Data Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orTVafw9&__jvst=Tenable+Employee&__jvsd=sXmXfhwh&__jvsc=Twitter&bid=nLhioMwZ'>Tenable Careers - Principal Data Engineer</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -253,7 +253,7 @@ systems,?...</p>
 <p><span class="badge badge-light">San Jose, California  Santa Clara, California  San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/properly/jobs/4500375002'>Job Application for Data Engineer at Properly</a></h5> 
+<h5><a href='https://boards.greenhouse.io/properly/jobs/4500375002'>Job Application for Data Engineer at Properly</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -269,7 +269,7 @@ systems,?...</p>
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://rek-swiss.join.com/jobs/467841-data-engineer-data-analyst-im-agilen-umfeld'>Job @ REK-Swiss (Bern): Data Engineer / Data Analy... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rek-swiss.join.com/jobs/467841-data-engineer-data-analyst-im-agilen-umfeld'>Job @ REK-Swiss (Bern): Data Engineer / Data Analy... | JOIN</a></h5> 
 <p><span class="badge badge-light">Bern, Schweiz</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -400,7 +400,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318417-senior-data-engineer'>CapTech Consulting Senior Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318417-senior-data-engineer'>CapTech Consulting Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -432,7 +432,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277725-data-engineer'>VISIAN Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277725-data-engineer'>VISIAN Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -452,7 +452,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4496358002'>Job Application for Data Engineering Manager at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4496358002'>Job Application for Data Engineering Manager at Starry</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -472,7 +472,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GFHealthProductsInc/743999696612587-data-engineer'>GF Health Products, Inc. Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GFHealthProductsInc/743999696612587-data-engineer'>GF Health Products, Inc. Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
